added new test cases and added testrunner